--- a/index.html
+++ b/index.html
@@ -9,42 +9,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Swagger UI CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.1.5/swagger-ui.min.css" integrity="sha512-6LuVsJW3b8POokLqWc7V9zWwjeHFGbe3bUuPmvsm5QD2FK7BN8TS39VZjs92WdeXQdEwvKZgA13aKkIVJheHeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <style>
-        /* Custom CSS untuk halaman */
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            margin-top: 50px;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        .btn-api-docs {
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            font-size: 18px;
-            margin-top: 20px;
-        }
-    </style>
+    <!-- CSS Eksternal untuk gaya kustom -->
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <!-- Logo web -->
         <img src="https://telegra.ph/file/727ec9ce1a059ca515074.jpg" alt="Logo" class="mb-4" style="width: 100px;">
         <!-- Judul -->
-        <h1 class="mb-4">API Documentation</h1>
+        <h1 class="mb-4">Dokumentasi API</h1>
         <!-- Deskripsi -->
-        <p class="lead mb-4">Welcome to the API documentation page!</p>
+        <p class="lead mb-4">Selamat datang di halaman dokumentasi API!</p>
         <!-- Tombol menuju halaman API docs -->
-        <a href="/api-docs" class="btn btn-api-docs">Go to API Docs <i class="fas fa-external-link-alt"></i></a>
-        <a href="https://whatsapp.com/channel/0029VagO6Lr2UPBJK3JXw40y" class="btn btn-api-docs">Follow Saluran Saya <i class="fas fa-external-link-alt"></i></a>
+        <a href="/api-docs" class="btn btn-api-docs">Menuju API Docs <i class="fas fa-external-link-alt"></i></a>
+        <a href="https://whatsapp.com/channel/0029VagO6Lr2UPBJK3JXw40y" class="btn btn-api-docs">Ikuti Saluran Saya <i class="fas fa-external-link-alt"></i></a>
     </div>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
