--- a/index.html
+++ b/index.html
@@ -3,26 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API AKUIVAN13</title>
+    <title>API Documentation</title>
     <link rel="shortcut icon" href="https://telegra.ph/file/727ec9ce1a059ca515074.jpg" type="image/x-icon" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Swagger UI CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.1.5/swagger-ui.min.css" integrity="sha512-6LuVsJW3b8POokLqWc7V9zWwjeHFGbe3bUuPmvsm5QD2FK7BN8TS39VZjs92WdeXQdEwvKZgA13aKkIVJheHeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- CSS Eksternal untuk gaya kustom -->
-    <link href="styles.css" rel="stylesheet">
+    <style>
+        /* CSS Kustom untuk halaman */
+        body {
+            font-family: Arial, sans-serif;
+            background-image: url('https://telegra.ph/file/727ec9ce1a059ca515074.jpg'); /* Ganti URL gambar sesuai kebutuhan */
+            background-size: cover; /* Memastikan gambar latar mengisi seluruh body */
+            background-repeat: no-repeat; /* Mencegah gambar latar diulang jika lebih kecil dari body */
+            background-position: center; /* Posisi gambar latar di tengah halaman */
+        }
+        .container {
+            margin-top: 50px;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh; /* Menggunakan tinggi viewport untuk konten tengah */
+            color: #fff; /* Warna teks diatur ke putih agar kontras dengan latar belakang */
+        }
+        .btn-api-docs {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-size: 18px;
+            margin-top: 20px;
+            text-decoration: none; /* Menghilangkan dekorasi default tautan */
+            display: inline-block;
+        }
+        .btn-api-docs:hover {
+            background-color: #0056b3; /* Warna latar belakang saat mengarahkan kursor */
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <!-- Logo web -->
         <img src="https://telegra.ph/file/727ec9ce1a059ca515074.jpg" alt="Logo" class="mb-4" style="width: 100px;">
         <!-- Judul -->
-        <h1 class="mb-4">Dokumentasi API</h1>
+        <h1 class="mb-4">API Documentation</h1>
         <!-- Deskripsi -->
-        <p class="lead mb-4">Selamat datang di halaman dokumentasi API!</p>
+        <p class="lead mb-4">Welcome to the API documentation page!</p>
         <!-- Tombol menuju halaman API docs -->
-        <a href="/api-docs" class="btn btn-api-docs">Menuju API Docs <i class="fas fa-external-link-alt"></i></a>
-        <a href="https://whatsapp.com/channel/0029VagO6Lr2UPBJK3JXw40y" class="btn btn-api-docs">Ikuti Saluran Saya <i class="fas fa-external-link-alt"></i></a>
+        <a href="/api-docs" class="btn btn-api-docs">Go to API Docs <i class="fas fa-external-link-alt"></i></a>
+        <a href="https://whatsapp.com/channel/0029VagO6Lr2UPBJK3JXw40y" class="btn btn-api-docs">Follow Saluran Saya <i class="fas fa-external-link-alt"></i></a>
     </div>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
