--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         /* CSS Kustom untuk halaman */
         body {
             font-family: Arial, sans-serif;
-            background-image: url('https://telegra.ph/file/727ec9ce1a059ca515074.jpg'); /* Ganti URL gambar sesuai kebutuhan */
+            background-image: url('https://files.catbox.moe/hbnnzs.jpg'); /* Ganti URL gambar sesuai kebutuhan */
             background-size: cover; /* Memastikan gambar latar mengisi seluruh body */
             background-repeat: no-repeat; /* Mencegah gambar latar diulang jika lebih kecil dari body */
             background-position: center; /* Posisi gambar latar di tengah halaman */
