--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 <body>
     <div class="container">
         <!-- Logo web -->
-        <img src="https://telegra.ph/file/727ec9ce1a059ca515074.jpg" alt="Logo" class="mb-4" style="width: 100px;">
+        <img src="https://files.catbox.moe/1vfrf2.jpg" alt="Logo" class="mb-4" style="width: 100px;">
         <!-- Judul -->
         <h1 class="mb-4">API Documentation</h1>
         <!-- Deskripsi -->
         <p class="lead mb-4">Welcome to the API documentation page!</p>
         <!-- Tombol menuju halaman API docs -->
         <a href="/api-docs" class="btn btn-api-docs">Go to API Docs <i class="fas fa-external-link-alt"></i></a>
-        <a href="https://whatsapp.com/channel/0029VagO6Lr2UPBJK3JXw40y" class="btn btn-api-docs">Follow Saluran Saya <i class="fas fa-external-link-alt"></i></a>
+        <a href="https://whatsapp.com/channel/0029VacDpZPJf05jSdI9qo2S" class="btn btn-api-docs">Follow Saluran Saya <i class="fas fa-external-link-alt"></i></a>
     </div>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
