--- a/index.html
+++ b/index.html
@@ -5,73 +5,145 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Documentation</title>
     <link rel="shortcut icon" href="https://files.catbox.moe/hbnnzs.jpg_" type="image/x-icon" />
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Swagger UI CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.1.5/swagger-ui.min.css" integrity="sha512-6LuVsJW3b8POokLqWc7V9zWwjeHFGbe3bUuPmvsm5QD2FK7BN8TS39VZjs92WdeXQdEwvKZgA13aKkIVJheHeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font -->
+    <link rel="stylesheet" href="https://xynz.vercel.app/data/font/ambisi.otf">
+    <!-- Custom CSS -->
     <style>
-        /* CSS Kustom untuk halaman */
-        body {
-            font-family: Arial, sans-serif;
-            background-image: url('https://files.catbox.moe/hbnnzs.jpg'); /* Ganti URL gambar sesuai kebutuhan */
-            background-size: cover; /* Memastikan gambar latar mengisi seluruh body */
-            background-repeat: no-repeat; /* Mencegah gambar latar diulang jika lebih kecil dari body */
-            background-position: center; /* Posisi gambar latar di tengah halaman */
+        html, body {
+            margin: 0;
+            height: 100%;
+            background: #111;
+            font-family: 'Ambisi', sans-serif;
+            color: #fff;
+            overflow: hidden; /* Prevent scroll bars */
         }
+
+        .hero {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1; /* Ensure background is behind content */
+        }
+
+        .hero svg {
+            width: 100%;
+            height: 100%;
+            font-family: 'Ambisi', sans-serif;
+        }
+
+        .hero svg text {
+            text-transform: uppercase;
+            animation: stroke 5s infinite alternate;
+            stroke-width: 2;
+            stroke: #111;
+            font-size: 15.5em;
+            fill: rgba(239, 223, 13, 1);
+        }
+
+        @keyframes stroke {
+            0% {
+                fill: rgba(239, 223, 13, 0);
+                stroke: rgba(239, 223, 13, 1);
+                stroke-dashoffset: 25%;
+                stroke-dasharray: 0 50%;
+                stroke-width: 2;
+            }
+            70% {
+                fill: rgba(239, 223, 13, 0);
+                stroke: rgba(239, 223, 13, 1);
+            }
+            80% {
+                fill: rgba(239, 223, 13, 0);
+                stroke: rgba(239, 223, 13, 1);
+                stroke-width: 3;
+            }
+            100% {
+                fill: rgba(239, 223, 13, 1);
+                stroke: rgba(239, 223, 13, 0);
+                stroke-dashoffset: -25%;
+                stroke-dasharray: 50% 0;
+                stroke-width: 0;
+            }
+        }
+
         .container {
-            margin-top: 50px;
-            text-align: center;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh; /* Menggunakan tinggi viewport untuk konten tengah */
-            color: #fff; /* Warna teks diatur ke putih agar kontras dengan latar belakang */
+            height: 100vh;
+            text-align: center;
+            z-index: 1; /* Ensure content is above SVG */
+            position: relative;
+            padding: 0 20px;
         }
-        .btn-api-docs {
+
+        .logo {
+            width: 100px;
+            margin-bottom: 20px;
+            border-radius: 10px; /* Rounded corners for the logo */
+            box-shadow: 0 4px 8px rgba(0,0,0,0.3); /* Subtle shadow */
+        }
+
+        .title {
+            font-size: 3rem;
+            margin: 0;
+            font-weight: bold;
+            color: #fff;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.7); /* Add subtle shadow for better readability */
+        }
+
+        .subtitle {
+            font-size: 1.25rem;
+            color: #ccc;
+            margin-bottom: 20px;
+        }
+
+        .text-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+            flex-wrap: wrap; /* Allow buttons to wrap to new line on smaller screens */
+        }
+
+        .link-text {
             background-color: #007bff;
             color: #fff;
-            border: none;
-            padding: 10px 20px;
+            padding: 12px 24px;
             border-radius: 5px;
-            font-size: 18px;
-            margin-top: 20px;
-            text-decoration: none; /* Menghilangkan dekorasi default tautan */
-            display: inline-block;
+            font-size: 1rem;
+            text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.3); /* Subtle shadow for buttons */
         }
-        .btn-api-docs:hover {
-            background-color: #0056b3; /* Warna latar belakang saat mengarahkan kursor */
+
+        .link-text:hover {
+            background-color: #0056b3;
+            transform: scale(1.05);
+        }
+
+        .link-text:focus {
+            outline: 2px solid #0056b3;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <!-- Logo web -->
-        <img src="https://files.catbox.moe/1vfrf2.jpg" alt="Logo" class="mb-4" style="width: 100px;">
-        <!-- Judul -->
-        <h1 class="mb-4">API Documentation</h1>
-        <!-- Deskripsi -->
-        <p class="lead mb-4">Welcome to the API documentation page!</p>
-        <!-- Tombol menuju halaman API docs -->
-        <a href="/api-docs" class="btn btn-api-docs">Go to API Docs <i class="fas fa-external-link-alt"></i></a>
-        <a href="https://whatsapp.com/channel/0029VacDpZPJf05jSdI9qo2S" class="btn btn-api-docs">Follow Saluran Saya <i class="fas fa-external-link-alt"></i></a>
+    <div class="hero">
+        <svg viewBox="0 0 1320 300">
+            <text x="50%" y="50%" dy=".35em" text-anchor="middle">Elaina</text>
+        </svg>
     </div>
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Swagger UI JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.1.5/swagger-ui-bundle.js" integrity="sha512-xgTfsETV4CXy2Cifh8D8s9vOU5i4Yph5P5YlDTHWV0+1VpJzPBEYX9cIGlf2gCyPIitwosV8C4Vr5DWa09qBOA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.1.5/swagger-ui-standalone-preset.js" integrity="sha512-piHN5uYIBiMWQ6v9F0L0oK0CIsGyZbpWPLSW1B+XTAofG9NzYJeyuURiE/FcDxv3xJYH1/8WyM1oK2cZYq8ybg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- Konfigurasi Swagger UI -->
-    <script>
-        window.onload = function() {
-            const ui = SwaggerUIBundle({
-                url: "/swagger.json",
-                dom_id: "#swagger-ui",
-                presets: [SwaggerUIBundle.presets.apis, SwaggerUIStandalonePreset],
-                layout: "BaseLayout",
-                deepLinking: true
-            });
-        };
-    </script>
+    <div class="container">
+        <img src="https://pomf2.lain.la/f/zp921a6n.jpg" alt="Logo" class="logo">
+        <h1 class="title">API Documentation</h1>
+        <p class="subtitle">Welcome to the API documentation page!</p>
+        <div class="text-container">
+            <a href="/api-docs" class="link-text">Go to API Docs</a>
+            <a href="https://whatsapp.com/channel/0029VacDpZPJf05jSdI9qo2S" class="link-text">Follow Saluran Saya</a>
+        </div>
+    </div>
 </body>
 </html>
